# deciphon

./: .pre-commit-config.yaml  README.md  compose.cfg  compose.yml  docker-compose.yml
.github/workflows/: build-gui.yml  release-cli-container.yml  release-cli.yml  release-control-container.yml  release-control.yml  release-deciphon-core.yml  release-deciphon-snap.yml  release-intervals.yml  release-poster.yml  release-python-core.yml  release-sched-container.yml  release-sched.yml  release-schema.yml  release-snap.yml  release-worker-container.yml  release-worker.yml  test-c-core.yml  test-cli.yml  test-compose.yml  test-control.yml  test-deciphon-core.yml  test-deciphon-py.yml  (+7 more)
c-core/: .gitignore  CMakeLists.txt  Makefile  TODO.txt  api.h  argmax.h  argmax_avx.h  argmax_generic.h  argmax_neon.h  asint.h  batch.c  batch.h  bit.h  bug.c  bug.h  build_bug.h  c11threads.h  chararray.c  chararray.h  clock.c  clock.h  codec.c  codec.h  compiler.h  compiler_attributes.h  container.h  database_reader.c  database_reader.h  database_version.h  database_writer.c  database_writer.h  db_reader.c  db_reader.h  db_writer.c  db_writer.h  debug.c  debug.h  deciphon-config.cmake.in  deciphon.h  deciphon_limits.h  (+246 more)
cli/: Dockerfile  README.md  TODO.txt  pyproject.toml
compose/: README.md  compose.cfg  compose.yml
control/: Dockerfile  pyproject.toml
control/deciphonctl/: __main__.py  catch_validation.py  cli.py  consumer.py  db.py  display_exception.py  error.py  hmm.py  job.py  logger.py  main.py  models.py  presigned.py  presser.py  s3.py  scan.py  scanner.py  sched.py  schemas.py  settings.py  signals.py  tempfiles.py  url.py  worker.py
control/deciphonctl/worker/: __init__.py  main.py  presser.py  progress_informer.py  schemas.py  upload.py
control/tests/: conftest.py  test_db.py  test_hmm.py  test_scan.py  test_snap.py
control/tests/files/: minifam.dcp  snap.dcs
ctl/: pyproject.toml
deciphon/: CMakeLists.txt  array_size.h  array_size_field.h  bug.h  chararray.h  codec.c  codec.h  compiler.h  db_reader.c  db_reader.h  db_writer.c  db_writer.h  deciphon-config.cmake.in  deciphon.h  echo.c  echo.h  entry_dist.h  expect.c  expect.h  fmt.c  fmt.h  fs.c  fs.h  h3reader.c  h3reader.h  hmm_reader.c  hmm_reader.h  hmmer.c  hmmer.h  hmmer_dialer.c  hmmer_dialer.h  hmmer_result.c  hmmer_result.h  iseq.h  lrt.h  match.c  match.h  match_iter.c  match_iter.h  matchiter.c  (+63 more)
deciphon-api/: pyproject.toml
deciphon-core/: .gitignore  build_ext.py
deciphon-eval/: list-ready-tune-deciphon-genomes.sh  pyproject.toml  run-guessed-positives-whole-genome.sh  run-positives-qual.sh  run-positives-whole-genome.sh  score-qual.sh  score-quant.sh
deciphon-eval/deciphon_eval/: confusion.py  portion_utils.py
deciphon-eval/script/: guessed_positives_whole_genome.py  hmmer_results.py  index.py  positives_whole_genome.py  profile_index.py  qual_index.py  score_qualitatively.py  score_quantitatively_whole_genome.py  sequence_index.py  view_qualitatively.py  view_quantitatively_whole_genome.py  whole_genome_index.py
deciphon-py/: pyproject.toml
deciphon-py/deciphon/: cli.py  seqfile.py
deciphon-py/tests/: test_press.py  test_scan.py  test_seqfile.py
deciphon-snap/: pyproject.toml
deciphon-snap/deciphon_snap/: hit.py  hmmer.py  interval.py  match.py  prod.py  shorten.py  snap_file.py
deciphon-snap/tests/: test_align.py  test_hits.py  test_read.py
eval/: guessed-positive-nucleotides.sh  guessed-positive-profiles.sh  list-ready-tune-deciphon-genomes.sh  pyproject.toml  run-guessed-positives-qual.sh  run-guessed-positives-whole-genome.sh  run-positives-whole-genome.sh  score-qualitatively.sh  score-quantitatively.sh  true-positive-nucleotides.sh  true-positive-profiles.sh
gui/: Deciphon.py  README.md  logo.icns  pyproject.toml
gui/deciphon_gui/: __main__.py  alignment.py  app.py  assets.py  banner.py  button.py  entry.py  epsilon.py  example.py  file.py  gencode.py  gui.py  heading.py  label.py  library.py  lift.py  option_menu.py  progress.py  sequence.py  shorten.py  submit.py  text.py  theme.json  theme.py  widget.py
intervals/: main.py  pyproject.toml
poster/: pyproject.toml
python-core/: .gitignore  build_ext.py  pyproject.toml
sched/: Dockerfile  TODO.txt  docker-compose.yml  pyproject.toml  requirements.txt
sched/deciphon_sched/: cli.py  database.py  journal.py  main.py  models.py  settings.py  testing.py
sched/deciphon_sched/sched/: hmms.py  jobs.py  models.py  scans.py  schemas.py
sched/deciphon_sched/scheduler/: schemas.py
sched/tests/: conftest.py  test_database.py  test_journal.py  test_models.py  test_storage.py
sched/tests/sched/: conftest.py  test_jobs.py  test_models.py  test_scans.py  test_snaps.py
sched/tests/sched/files/: consensus.dcs
scheduler/: Dockerfile  README.md  TODO.txt  docker-compose.yml  pyproject.toml
scheduler/deciphon_sched/: database.py  settings.py  storage.py
scheduler/deciphon_sched/scheduler/: hmms.py
scheduler/deciphon_scheduler/: database.py  errors.py  journal.py  main.py  models.py  settings.py  storage.py
scheduler/deciphon_scheduler/scheduler/: __init__.py  dbs.py  hmms.py  jobs.py  models.py  scans.py  schemas.py  validation.py
scheduler/tests/: conftest.py  test_database.py  test_journal.py  test_storage.py
scheduler/tests/scheduler/: conftest.py  test_dbs.py  test_hmms.py  test_jobs.py  test_models.py  test_scans.py
schema/: pyproject.toml
snap/: TODO.txt  pyproject.toml
snap/deciphon_snap/: amino.py  fasta.py  gff.py  hit.py  match.py  prod.py  read_snap.py  snap_file.py
snap/tests/: test_align.py  test_alignments.py  test_fasta.py  test_gff.py  test_hits.py  test_interval.py  test_read.py
snap/tests/files/: consensus.dcs  example.dcs  example2.dcs
tests/: desired.txt  scan.json  test-compose.sh  test_compose.sh
worker/: Dockerfile  pyproject.toml  requirements.txt
worker/deciphon_worker/: hmmer.py  logger.py  main.py  models.py  presigned.py  presser.py  producer.py  scanner.py  settings.py  tempfiles.py  url_filename.py
worker/tests/: test_hmmer.py  test_press.py  test_scanner.py
(+38 files in other folders)
