[tool.poetry]
name = "deciphonctl"
version = "0.1.0"
description = "Control Deciphon server."
authors = ["Danilo Horta <horta@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "deciphonctl" }]

[tool.poetry.dependencies]
python = "^3.9"
typer = { extras = ["all"], version = ">=0.9.0" }
requests = "^2.31.0"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
fasta-reader = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[tool.poetry.scripts]
deciphonctl = 'deciphonctl.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
