[tool.poetry]
name = "deciphonctl"
version = "0.1.0"
description = "Control Deciphon server."
authors = ["Danilo Horta <horta@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "deciphonctl" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0"
requests = "^2"
pydantic = "^2"
pydantic-settings = "^2"
fasta-reader = "^3"
deciphon = "^0"
deciphon-core = "^0"
loguru = "^0"
deciphon-sched = { version = "^0", extras = ["testing"] }

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
uvicorn = "^0"

[tool.poetry.scripts]
deciphonctl = 'deciphonctl.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
