[project]
name = "deciphonctl"
version = "1.0.1"
description = "Control Deciphon server."
authors = [{ name = "Danilo Horta", email = "horta@ebi.ac.uk" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "typer>=0.12,<0.13",
    "requests~=2.32",
    "pydantic~=2.9",
    "pydantic-settings~=2.5",
    "fasta-reader>=3.0.3,<4",
    "loguru>=0.7,<0.8",
    "requests-toolbelt~=1.0",
    "paho-mqtt~=2.1",
    "deciphon>=1.0.3,<2",
    "deciphon-poster>=0.2.2,<0.3",
    "xdg-base-dirs>=6.0.2,<7",
    "python-dotenv>=1.0.1,<2",
]

[project.scripts]
deciphonctl = "deciphonctl.cli:app"

[dependency-groups]
dev = [
    "deciphon-sched[testing]>=1.0.8,<2",
    "pytest~=8.2",
    "uvicorn>=0.30,<0.31",
    "pytest-env>=1.1.5,<2",
]

[tool.hatch.build.targets.sdist]
include = ["deciphonctl"]

[tool.hatch.build.targets.wheel]
include = ["deciphonctl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pytest_env]
XDG_CONFIG_HOME = "/dev/null"
