[tool.poetry]
name = "deciphon"
version = "0.8.1"
description = "Individually annotate long, error-prone nucleotide sequences into proteins"
authors = ["Danilo Horta <horta@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "deciphon" }]

[tool.poetry.dependencies]
cffi = ">=1.15.1"
deciphon-core = ">=0.12.0"
deciphon-snap = ">=0.1.0"
fasta-reader = ">=3.0.1"
h3daemon = ">=0.13.3"
hmmer = ">=0.2.4"
ijson = ">=3.2.1"
pydantic = ">=1.10.9"
python = "^3.9"
typer = { extras = ["all"], version = ">=0.9.0" }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deciphon = 'deciphon.cli:app'
