[tool.poetry]
name = "deciphon-snap"
version = "0.1.2"
description = "Reader for Deciphon snap files."
authors = ["Danilo Horta <horta@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "deciphon_snap" }]

[tool.poetry.dependencies]
fsspec = { extras = ["libarchive"], version = ">=2023.6.0" }
prettytable = ">=3.8.0"
pydantic = ">=1.10.9"
python = "^3.9"
h3result = ">=0.3.0"
hmmer-tables = ">=0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
