[tool.poetry]
name = "deciphon-gui"
version = "0.1.0"
description = ""
authors = ["Danilo Horta <danilo.horta@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
customtkinter = "^5.2.2"
fasta-reader = "^3.1.0"
deciphon-worker = { path = "/Users/horta/code/deciphon-worker", develop = true }
deciphon-core = "^1.0.4"
pillow = "^11.0.0"
pydantic = "^2.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
