[tool.poetry]
name = "deciphon-gui"
version = "0.1.0"
description = ""
authors = ["Danilo Horta <danilo.horta@pm.me>"]
readme = "README.md"
include = [
  { path = "deciphon_gui/file_disabled.png", format = [
    "sdist",
    "wheel",
  ] },
  { path = "deciphon_gui/file_enabled.png", format = [
    "sdist",
    "wheel",
  ] },
  { path = "deciphon_gui/theme.json", format = [
    "sdist",
    "wheel",
  ] },
]

[tool.poetry.dependencies]
python = "^3.10"
customtkinter = "^5.2.2"
fasta-reader = "^3.1.0"
deciphon-worker = "^0.3.9"
deciphon-core = "^1.0.11"
pillow = "^11.0.0"
pydantic = "^2.9"
deciphon-schema = "^0.1.2"
h3daemon = "^0.16.14"
xdg-base-dirs = "^6.0.2"
xxhash = "^3.5.0"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
