[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deciphon-intervals"
version = "1.0.0"
description = "It helps to model the Python and R intervals seamlessly."
authors = [{ name = "Danilo Horta", email = "danilo.horta@pm.me" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
dependencies = ["pydantic~=2.7"]
