[tool.poetry]
name = "deciphon-sched"
version = "0.1.0"
description = "Deciphon scheduler"
authors = ["Danilo Horta <horta@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = { extras = ["all"], version = "^0.100" }
fasta-reader = "^3.0"
uvicorn = { extras = ["standard"], version = "^0.23" }
sqlalchemy = "^2.0"
pydantic-settings = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
