[tool.poetry]
name = "deciphon-sched"
version = "0.1.0"
description = "Deciphon scheduler"
authors = ["Danilo Horta <horta@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = { extras = ["all"], version = "^0.100" }
fasta-reader = "^3"
uvicorn = { extras = ["standard"], version = "^0" }
sqlalchemy = "^2.0"
pydantic-settings = "^2"
boto3 = "^1.28"
pydantic = "^2"
aiomqtt = "^1"
deciphon-core = "^0"
loguru = "^0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flask = "^2.3.2"
flask-cors = "^4.0.0"
pytest-asyncio = "^0.21.1"
requests = "^2.31.0"
testcontainers-core = "^0.0.1rc1"
testcontainers-minio = "^0.0.1rc1"
testcontainers = "^3.7.1"
paho-mqtt = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
