[project]
name = "deciphon-snap"
version = "1.0.3"
description = "Reader for Deciphon snap files."
authors = [{ name = "Danilo Horta", email = "horta@ebi.ac.uk" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "fsspec>=2024.12.0",
    "h3result>=1.0.1,<2",
    "fasta-reader>=3.0.3,<4",
    "deciphon-intervals>=1.0.0,<2",
    "prettytable~=3.11",
    "pydantic~=2.9",
    "hmmer-tables>=1.0.2,<2",
]

[dependency-groups]
dev = ["pytest~=8.2"]

[tool.hatch.build.targets.sdist]
include = ["deciphon_snap"]

[tool.hatch.build.targets.wheel]
include = ["deciphon_snap"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
