[tool.poetry]
name = "deciphon-worker"
version = "0.1.0"
description = ""
authors = ["Danilo Horta <horta@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deciphon_worker"}]

[tool.poetry.dependencies]
python = "^3.9"
aiomqtt = "^1.1.0"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
deciphon-core = "^0.13.1"
deciphon = "^0.9.0"
requests = "^2.31.0"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
